# Kashimo

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
src/: Kashimo.ts  Main.ts  controller.ts  crop.rs  error.rs  harvest.rs  kashimo.rs  kashimo.ts  main.rs
src/core/: botevents.ts  gamedata.ts  ipc.ts  logger.ts  task.ts
src/farming/: Crop.ts  CropData.ts  CropRegistry.ts  CropSet.ts  cropdata.ts  farmtask.ts
src/inventory/: botchest.ts  botstorage.ts
src/plugins/: Digger.ts  Farmer.ts  Harvester.ts  PlayerInventory.ts
src/storage/: ChunkLoader.ts  ChunkRegistry.ts
src/utils/: ChunkMath.ts  Logger.ts
