[package]
name = "kashimo"
version = "0.1.0"
edition = "2021"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.11.0" }
bevy_ecs = "0.15.3"
fixed = "1.29.0"
kiddo = "5.0.3"
lock_api = "0.4.12"
parking_lot = "0.12.3"
tokio = { version = "1.44.2", features = ["rt"] }
